--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-
+  <head>
+    <meta charset="utf-8">
+    <title>你好，GitHub</title>
+  </head>
 <script type="text/javascript">
 
 function detectBrowser()
