--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
     <meta charset="utf-8">
     <title>Taipei_Tech-Monument</title>
   </head>
-<script type="text/javascript">
+  <script type="text/javascript">
 
-function detectBrowser()
-{
-    var slashIndex = window.location.href.lastIndexOf("/");
-    var cropped = window.location.href.slice(0,slashIndex+1);
+    function detectBrowser()
+    {
+        var slashIndex = window.location.href.lastIndexOf("/");
+        var cropped = window.location.href.slice(0,slashIndex+1);
 
-    window.location.replace(cropped + "assets/player/KeynoteDHTMLPlayer.html");
-}
+        window.location.replace(cropped + "assets/player/KeynoteDHTMLPlayer.html");
+    }
 
-</script>
-
-<body bgcolor="black" onload="detectBrowser()">
-</body>
-
+  </script>
+  <body bgcolor="black" onload="detectBrowser()"></body>
 </html>
